tests/syntax_error/python_cast_int64.jou
def blah() -> None:
    x = int64("123")  # Error: int64 is not a function, use 'as int64' to convert between numbers or e.g. atoll() from "stdlib/str.jou" to convert a string to int64
